[gd_scene load_steps=16 format=3 uid="uid://bt4wbwwt5jfud"]

[ext_resource type="Texture2D" uid="uid://cpayalanher7l" path="res://environment/main_menu/ui_assets_menu/BACKGROUND.png" id="1_xt8ii"]
[ext_resource type="Script" uid="uid://bsseg3e1ipjve" path="res://story/story_button_manager.gd" id="2_xt8ii"]
[ext_resource type="Texture2D" uid="uid://ckygq8y3p1xow" path="res://environment/ui_asset/Button.png" id="3_rvjdh"]
[ext_resource type="FontFile" uid="uid://cdya30u1ro1xm" path="res://fonts/HOMINIS.TTF" id="4_pcg3f"]
[ext_resource type="AudioStream" uid="uid://bg22rsrb3anjg" path="res://audio/click.wav" id="5_qq3eg"]
[ext_resource type="Script" uid="uid://dpo7uhmiqbvx3" path="res://story/scene/story_chapter_button.gd" id="5_rvjdh"]
[ext_resource type="Texture2D" uid="uid://ctvhsr02jjckl" path="res://environment/ui_asset/COIN_LOGOUI.png" id="6_hq2sf"]
[ext_resource type="Texture2D" uid="uid://jddl58fpq4vg" path="res://environment/ui_asset/UPDATE/prolog_ui.png" id="7_larb4"]
[ext_resource type="FontFile" uid="uid://b6oh7wlewlx2b" path="res://fonts/Libertinus_Serif/TEXT_LibertinusSerif-BoldItalic.ttf" id="7_pcg3f"]
[ext_resource type="Texture2D" uid="uid://blw8xt0ik0ebq" path="res://environment/ui_asset/UPDATE/chapter1_ui.png" id="8_v3oug"]
[ext_resource type="Texture2D" uid="uid://bhv70iljnxddq" path="res://environment/ui_asset/UPDATE/chapter2_ui.png" id="9_bfok0"]
[ext_resource type="Script" uid="uid://byjix033eqqv6" path="res://environment/main_menu/main_label_manager.gd" id="9_qq3eg"]
[ext_resource type="Texture2D" uid="uid://b2ensmoda10nk" path="res://environment/ui_asset/UPDATE/chaptre3_ui.png" id="10_k0lb0"]
[ext_resource type="AudioStream" uid="uid://chujtk87l5sl4" path="res://audio/Critical Tension - Ticking Trailer 1 Min.mp3" id="11_hq2sf"]
[ext_resource type="FontFile" uid="uid://kxr41xv5mgjv" path="res://fonts/Libertinus_Serif/TEXT_LibertinusSerif-Bold.ttf" id="14_larb4"]

[node name="StoryScene" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
offset_left = -152.0
offset_top = -112.0
offset_right = 2059.0
offset_bottom = 1212.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_xt8ii")

[node name="StoryButton" type="Node2D" parent="."]
script = ExtResource("2_xt8ii")

[node name="StoryChapterIntro" type="TextureButton" parent="StoryButton" groups=["chapter_buttons"]]
offset_left = 128.0
offset_top = 448.0
offset_right = 521.0
offset_bottom = 584.0
texture_normal = ExtResource("3_rvjdh")
script = ExtResource("5_rvjdh")
chapter_key = "chapter_intro"

[node name="Label" type="Label" parent="StoryButton/StoryChapterIntro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -40.0
offset_right = 151.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_pcg3f")
theme_override_font_sizes/font_size = 28
text = "unlocked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StoryChapterOne" type="TextureButton" parent="StoryButton" groups=["chapter_buttons"]]
offset_left = 728.0
offset_top = 448.0
offset_right = 1121.0
offset_bottom = 584.0
texture_normal = ExtResource("3_rvjdh")
script = ExtResource("5_rvjdh")
chapter_key = "chapter_one"

[node name="Label" type="Label" parent="StoryButton/StoryChapterOne"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -39.0
offset_right = 154.5
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_pcg3f")
theme_override_font_sizes/font_size = 28
text = "unlocked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StoryChapterFirstDie" type="TextureButton" parent="StoryButton" groups=["chapter_buttons"]]
offset_left = 1392.0
offset_top = 448.0
offset_right = 1785.0
offset_bottom = 584.0
texture_normal = ExtResource("3_rvjdh")
script = ExtResource("5_rvjdh")
chapter_key = "chapter_first_die"

[node name="Label" type="Label" parent="StoryButton/StoryChapterFirstDie"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -39.0
offset_right = 156.5
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("4_pcg3f")
theme_override_font_sizes/font_size = 28
text = "unlocked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StoryChapterTwo" type="TextureButton" parent="StoryButton" groups=["chapter_buttons"]]
offset_left = 428.0
offset_top = 853.5
offset_right = 821.0
offset_bottom = 989.5
texture_normal = ExtResource("3_rvjdh")
script = ExtResource("5_rvjdh")
chapter_key = "chapter_two"

[node name="Label" type="Label" parent="StoryButton/StoryChapterTwo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -40.0
offset_right = 150.5
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_pcg3f")
theme_override_font_sizes/font_size = 28
text = "unlocked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StoryChapterThree" type="TextureButton" parent="StoryButton" groups=["chapter_buttons"]]
offset_left = 1072.0
offset_top = 851.5
offset_right = 1465.0
offset_bottom = 987.5
texture_normal = ExtResource("3_rvjdh")
script = ExtResource("5_rvjdh")
chapter_key = "chapter_three"

[node name="Label" type="Label" parent="StoryButton/StoryChapterThree"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.5
anchor_right = 0.499
anchor_bottom = 0.5
offset_left = -157.107
offset_top = -39.0
offset_right = 155.893
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_pcg3f")
theme_override_font_sizes/font_size = 28
text = "unlocked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToMenu" type="TextureButton" parent="StoryButton"]
offset_left = 1506.0
offset_top = 18.0
offset_right = 1899.0
offset_bottom = 154.0
texture_normal = ExtResource("3_rvjdh")

[node name="Label" type="Label" parent="StoryButton/BackToMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.507
anchor_right = 0.5
anchor_bottom = 0.507
offset_left = -161.5
offset_top = -40.952
offset_right = 163.5
offset_bottom = 39.048
theme_override_fonts/font = ExtResource("4_pcg3f")
theme_override_font_sizes/font_size = 28
text = "Back To Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeedbackLabel" type="Label" parent="StoryButton"]
unique_name_in_owner = true
visible = false
offset_left = 717.0
offset_top = 85.0
offset_right = 1191.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(0.856467, 0.000221955, 0.000121001, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_pcg3f")
theme_override_font_sizes/font_size = 56
text = "Not enough COIN"

[node name="CoverChapter" type="Node2D" parent="."]

[node name="PrologUi" type="Sprite2D" parent="CoverChapter"]
position = Vector2(324, 313)
scale = Vector2(0.697266, 0.697266)
texture = ExtResource("7_larb4")

[node name="PrologUi2" type="Sprite2D" parent="CoverChapter"]
position = Vector2(922, 313)
scale = Vector2(0.697266, 0.697266)
texture = ExtResource("8_v3oug")

[node name="PrologUi3" type="Sprite2D" parent="CoverChapter"]
position = Vector2(1590, 311)
scale = Vector2(0.697266, 0.697266)
texture = ExtResource("7_larb4")

[node name="PrologUi4" type="Sprite2D" parent="CoverChapter"]
position = Vector2(621, 718.5)
scale = Vector2(0.697266, 0.697266)
texture = ExtResource("9_bfok0")

[node name="PrologUi5" type="Sprite2D" parent="CoverChapter"]
position = Vector2(1271, 716.5)
scale = Vector2(0.697266, 0.697266)
texture = ExtResource("10_k0lb0")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_qq3eg")
volume_db = 9.0

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("9_qq3eg")

[node name="CoinLogoui" type="Sprite2D" parent="Node2D"]
position = Vector2(104, 72)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_hq2sf")

[node name="CoinLabel" type="Label" parent="Node2D"]
unique_name_in_owner = true
offset_left = 202.0
offset_top = 21.0
offset_right = 651.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 52
theme_override_fonts/font = ExtResource("14_larb4")
theme_override_font_sizes/font_size = 64
text = "0000"
vertical_alignment = 1

[node name="MenuBgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_hq2sf")
volume_db = -4.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="StoryButton/StoryChapterIntro" to="StoryButton" method="_on_story_chapter_intro_pressed"]
[connection signal="pressed" from="StoryButton/StoryChapterOne" to="StoryButton" method="_on_story_chapter_one_pressed"]
[connection signal="pressed" from="StoryButton/StoryChapterFirstDie" to="StoryButton" method="_on_story_chapter_first_die_pressed"]
[connection signal="pressed" from="StoryButton/StoryChapterTwo" to="StoryButton" method="_on_story_chapter_two_pressed"]
[connection signal="pressed" from="StoryButton/StoryChapterThree" to="StoryButton" method="_on_story_chapter_three_pressed"]
[connection signal="pressed" from="StoryButton/BackToMenu" to="StoryButton" method="_on_back_to_menu_pressed"]
